syntax = "proto3";

package org.drasyl.remote.protocol;

message PublicHeader {
    sfixed64 id = 1; // 8 bytes fix
    sint32 networkId = 2; // up to 4 bytes
    bytes sender = 3; // 33 bytes fix
    sint32 proofOfWork = 4; // up to 4 bytes
    bytes recipient = 5; // 33 bytes fix
    uint32 hopCount = 6; // 1 byte fix (by definition, only values between 1 and 127 are allowed)
    bytes signature = 7; // 32 bytes fix
    uint32 chunkNo = 8; // up to 2 bytes (by definition, only values up to 65535 are allowed)
    uint32 totalChunks = 9; // up to 2 bytes (by definition, only values up to 65535 are allowed)
}

message PrivateHeader {
    MessageType type = 1;
}

enum MessageType {
    ACKNOWLEDGEMENT = 0;
    APPLICATION = 1;
    DISCOVERY = 2;
    UNITE = 3;
}

message Acknowledgement {
    sfixed64 correspondingId = 1; // 8 bytes fix
}

message Application {
    bytes payload = 1;
    string type = 2;
}

message Discovery {
    uint64 childrenTime = 1;
}

message Unite {
    bytes publicKey = 1; // 33 bytes fix
    string address = 2; // hostname
    bytes port = 3; // 2 bytes fix
}
